# Copyright (C) 2012, 2013 Khaled Hosny and Barry Schwartz
# This file is part of the Sorts Mill Tools.
# 
# Sorts Mill Tools is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
# 
# Sorts Mill Tools is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, see <http://www.gnu.org/licenses/>.

# Copyright (C) 2000-2012 by George Williams
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# Redistributions of source code must retain the above copyright notice, this
# list of conditions and the following disclaimer.
#
# Redistributions in binary form must reproduce the above copyright notice,
# this list of conditions and the following disclaimer in the documentation
# and/or other materials provided with the distribution.
#
# The name of the author may not be used to endorse or promote products
# derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR IMPLIED
# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
# EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

include $(top_srcdir)/mk/flags.am

noinst_LTLIBRARIES =
EXTRA_DIST =
MOSTLYCLEANFILES =

#--------------------------------------------------------------------------

noinst_LTLIBRARIES += libsortsmill_gutils.la

dist_libsortsmill_gutils_la_SOURCES =
nodist_libsortsmill_gutils_la_SOURCES =

dist_libsortsmill_gutils_la_SOURCES += divisors.c
dist_libsortsmill_gutils_la_SOURCES += gfile.c
dist_libsortsmill_gutils_la_SOURCES += gcol.c
dist_libsortsmill_gutils_la_SOURCES += gimage.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadbmp.c
dist_libsortsmill_gutils_la_SOURCES += gimageread.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadgif.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadjpeg.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadpng.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadras.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadrgb.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadtiff.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadxbm.c
dist_libsortsmill_gutils_la_SOURCES += gimagereadxpm.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritebmp.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritegimage.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritejpeg.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritepng.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritexbm.c
dist_libsortsmill_gutils_la_SOURCES += gimagewritexpm.c
dist_libsortsmill_gutils_la_SOURCES += gio.c
dist_libsortsmill_gutils_la_SOURCES += giofile.c
dist_libsortsmill_gutils_la_SOURCES += giohosts.c
dist_libsortsmill_gutils_la_SOURCES += giomime.c
dist_libsortsmill_gutils_la_SOURCES += giotrans.c
dist_libsortsmill_gutils_la_SOURCES += gimagebmpP.h
dist_libsortsmill_gutils_la_SOURCES += giofuncP.h
dist_libsortsmill_gutils_la_SOURCES += gioP.h

#--------------------------------------------------------------------------
